# hfe-system

./: .env.example  .gitignore  README.md  platformio.ini  pyproject.toml  requirements.txt
analysis/: pyproject.toml  requirements.txt
analysis/cli/: hx_analyze.py
analysis/diagrams/: build_figures.py  figure_sources.py
analysis/docs/: Lab Tank.step  viscosity_models.tex
analysis/notebooks/: Cooling_energy_integration.ipynb  HFE7200_pressure_drop.ipynb  HFE_cooldown.ipynb  HFE_cooldown_models.ipynb  HFE_measurements.ipynb  HFE_properties.ipynb  HX_performance_analysis.ipynb  TC_calibration.ipynb  TC_reading_uncertainty.ipynb  cooldown_model.ipynb  hfe7200_ln2_dip.ipynb  latest_recirculation_flow_meter_temperature.ipynb  leak_checks.ipynb  log_20260330_161922_review.ipynb  log_20260408_103255_review.ipynb  log_20260417_094053_review.ipynb  log_20260422_143345_review.ipynb  log_20260424_153546_review.ipynb  pump_performance.ipynb  pump_speed.ipynb  recirculation_trendline.ipynb  system_cooldown_behavior.ipynb  system_performance.ipynb  test.ipynb  thermo_analysis.ipynb  tmp_leak_tightness_dissertation_plots.ipynb  vacuum_pressure_rise.ipynb  viscosity_estimate.ipynb
analysis/notebooks/HFE_measurements_plots/: hfe_thm_S11_S21_temp_time_dthmdt_LNvalve_dashed_code.py  hfe_thm_single_cycle_dissertation_code.py
analysis/notebooks/log_review/: README.md  log_20260330_161922_review.ipynb  log_20260402_150754_review.ipynb  log_20260417_094053_review.ipynb  log_20260422_143345_review.ipynb
analysis/notebooks/system_performance_plots/: README.txt
analysis/reports/: vacuum_test.tex
analysis/src/hfe_ana/: __init__.py  filters.py  hx.py  io.py  notebook.py  viz.py
analysis/src/hfe_ana.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
analysis/src/hfe_ana/cli/: hx_analyze.py
analysis/src/orca/: __init__.py  cli.py  cooldown.py  core.py  cryogenic.py  leaks.py  logbook.py  notebook.py
clients/: plot_live.py  tk_client.py
config/: config.yaml
firmware/: platformio.ini  requirements.txt
scripts/: plot_temp.py  (+4 more)
(+97 files in other folders)
