[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfe-system"
version = "0.1.0"
description = "Supervisor, firmware helpers, and analysis tooling for the HFE System."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pyserial==3.5",
  "pyserial-asyncio==0.6",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "websockets==12.0",
]

[project.optional-dependencies]
analysis = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "matplotlib==3.8.4",
  "scikit-learn==1.4.2",
  "scipy==1.11.4",
  "pyarrow==17.0.0",
]
notebooks = [
  "jupyter==1.0.0",
  "nbformat==5.10.4",
  "nbclient==0.10.0",
]
legacy-ui = [
  "matplotlib==3.8.4",
  "numpy==1.26.4",
]

[tool.setuptools]
packages = []
