[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca"
version = "0.1.0"
description = "ORCA: Operational Recirculation and Cryogenic Analysis for the HFE system."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.2",
    "scipy>=1.11",
    "scikit-learn>=1.4",
]

[project.scripts]
orca-hx = "orca.cli:main"
hfe-hx = "orca.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orca = ["py.typed"]
